[tool.poetry]
name = "tdd-with-python"
version = "0.1.0"
description = "A practical guide to unit testing in python with unittest and pytest"
authors = ["lvittor <lvittor@itba.edu.ar>"]

[tool.poetry.dependencies]
python = "^3.8"
unittest = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
